Update CSS and work on responsiveness

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -3,8 +3,11 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
-    background-color:#94B3B6;
-    height:55px;
+    background-color: #FFEED8;
+    height:65px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin-top: 25px;
   }
   
   button {
@@ -20,7 +23,7 @@
     color: #36395A;
     cursor: pointer;
     display: inline-flex;
-    font-family: 'Patrick Hand SC', cursive;
+    font-family: 'Poiret One', cursive;
     height: 48px;
     justify-content: center;
     line-height: 1;
@@ -39,18 +42,21 @@
     will-change: box-shadow,transform;
     font-size: 25px;
   }
-  
-  button:focus {
+ 
+button:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
   }
   
   button:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     transform: translateY(-2px);
-    background-color: #BBDFE0;
   }
   
   button:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
   }
+
+.bookshelf-img {
+    height: 65px;
+} 
