--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -3,13 +3,15 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-    border-radius: 0.5em;
+    border-radius: 0.5em; 
     border: 10px solid #084C61;
     margin: 0;
     box-shadow: 0 0 10px grey;
     position: relative;
     background-color: #FCFCFD;
-  }
+    padding: 8px;
+  } 
+
   
   .card:hover,
   .card:focus{ 
@@ -41,20 +43,21 @@
   }
   
   .card-author {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     overflow: auto;
   }
 
   .card-title {
-    font-size: 1.5em;
+    font-size: 1.5rem;
+    word-wrap: break-word;
   }
-  
-  .card-type {
-    font-size: 1.0em;
-    /* position: absolute;
-    right: 0;
-    bottom: 0; */
-    margin-bottom: 10px;
-    margin-top: 3px;
-    overflow: auto;
-  }
+
+@media only screen and (min-width:300px) and (max-width:480px) {
+
+}
+
+@media only screen and (min-width:481px) and (max-width:768px) {
+}
+
+@media only screen and (min-width: 769px) and (max-width:1024px) {
+}
