CSS changes to components

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -10,3 +10,9 @@
     height: 120px; 
     width: 325px;
 }
+
+.site-design {
+    /* filter: invert(27%) sepia(5%) saturate(3516%) hue-rotate(334deg) brightness(92%) contrast(91%); */
+    height: 120px;
+    width: 325px;
+}
